Ensure page doesn't get too wide, and keep everything centred
Relates #55

--- a/public/index.css
+++ b/public/index.css
@@ -17,7 +17,9 @@ body {
 }
 
 #app {
+  margin: 0 auto;
   margin-top: 3.5rem;
+  max-width: 90rem;
 }
 
 input {
